--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+# Database
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:templates
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=jb
+spring.datasource.password=2021
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
