--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,6 +15,8 @@ jobs:
         java-version: 1.11
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Jacoco report
+      run: ./gradlew build jacocoTestReport
     - name: Build with Gradle
       run: ./gradlew build
     - uses: codecov/codecov-action@v1
