Changed CRON to every 10 minutes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.hibernate.ddl-auto=create
 server.port = 8080
 
 # Settings
-template.cron = 10 * * * * ?
+template.cron = * */10 * * * ?
